# websearch-mcp-server

./: .env.example  LICENSE  README-zh.md  README.md  config.py  http_client.py  pyproject.toml  server.py
providers/: baidu.py  base.py  bing.py  enums.py  factory.py  github.py  google.py  wechat.py
tests/: test_agent_search.py  test_baidu_search.py  test_bing_search.py  test_browser_use.py  test_github_search.py  test_open_url.py  test_query_optimizer.py  test_result_formatter.py  test_wechat_search.py
xagents/: agent.py  query_optimizer.py  result_formatter.py
