[project]
name = "websearch-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.11.1",
    "fastmcp>=2.5.1",
    "markitdown[all]>=0.1.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
