[project]
name = "websearch-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.11.1",
    "fastmcp>=2.5.1",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.1",
    "nodriver>=0.46.1",
    "openai-agents[litellm]>=0.0.17",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
